--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                             <span class="text-xl font-bold">SQL</span>
                         </div>
                         <div class="bg-[rgba(139,119,217,0.2)] border-2 border-[rgba(139,119,217,0.5)] p-5 rounded-xl hover:bg-[rgba(139,119,217,0.4)] hover:-translate-y-1 transition-all duration-300 flex items-center justify-center">
-                            <img src="python.png" alt="Python" class="w-10 h-10 object-contain">
+                            <img src="Python.png" alt="Python" class="w-10 h-10 object-contain">
                         </div>
                     </div>
                 </div>
